src/css/App.css
/* ... */
.nav-sub {
  right: 0;
  -webkit-transform: translateX(0%);
  -ms-transform: translateX(0%);
  -o-transform: translateX(0%);
  -moz-transform: translateX(0%);
  transform: translateX(0%);
  max-width: calc(var(--widest) - calc(var(--page-padding) * 2));
  z-index: 3;
}
.fadeOut .nav-sub {
  -webkit-animation: 0.5s fadeOutUp forwards;
  -moz-animation: 0.5s fadeOutUp forwards;
  -o-animation: 0.5s fadeOutUp forwards;
  -ms-animation: 0.5s fadeOutUp forwards;
  animation: 0.5s fadeOutUp forwards;
}
.nav-sub.transformations ul {
  transition-property: right, left;
  transition-timing-function: cubic-bezier(0.15, 0, 0.85, 1);
  transition-duration: 600ms;
}
.nav-sub ul {
  overflow-x: scroll;
  white-space: nowrap;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
  flex-flow: row nowrap;
  justify-content: flex-start;
  align-items: center;
  margin-left: 0;
  margin-right: initial;
  padding-bottom: 1em;
  max-width: calc(100vw - var(--scrollbar_width));
  scrollbar-color: transparent;
  scrollbar-width: none;
}

.nav-sub ul {
  padding-left: 3em;
  padding-right: 3em;
}
.nav-sub ul::-webkit-scrollbar {
  height: 0;
}

#root .main-content .nav-sub button.horizontal-scroll.disabled {
  background-color: hsla(var(--hue-primary), var(--sat-fade), 8%, 0.7);
  background-image: none;
  border-color: var(--color-gray-3);
  border-bottom-width: 3px;
  border-style: dashed;
  box-shadow: none;
  color: var(--color-gray-6);
}
#root .light .main-content .nav-sub button.horizontal-scroll.disabled {
  background-color: hsla(var(--hue-primary), var(--sat-fade), 88%, 0.7);
  background-image: none;
}

button.horizontal-scroll {
  position: absolute;
  top: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--color-primary-2);
  color: var(--color-gray-7);
  padding: 0.08em 0.1em 0.02em;
  margin: 0;
  border: 0;
  border-bottom: 3px solid var(--color-primary-8);
  opacity: 1;
  z-index: 1;
}
button.goleft {
  left: -0.1em;
  padding-right: 0.3em;
  border-radius: 0 var(--radius-large) var(--radius-large) 0;
  -webkit-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  -o-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  -moz-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  -ms-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
}
button.goright {
  right: -0.1em;
  padding-left: 0.3em;
  border-radius: var(--radius-large) 0 0 var(--radius-large);
  -webkit-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  -o-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  -ms-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  -moz-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
  box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-2);
}
.light button.goleft {
  left: -0.1em;
  padding-right: 0.3em;
  border-radius: 0 var(--radius-large) var(--radius-large) 0;
  -webkit-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  -o-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  -moz-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  -ms-box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  box-shadow:
    0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
}
.light button.goright {
  right: -0.1em;
  padding-left: 0.3em;
  border-radius: var(--radius-large) 0 0 var(--radius-large);
  -webkit-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  -o-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  -ms-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  -moz-box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
  box-shadow:
    -0.1em 0 0.2em -0.15em var(--color-primary-9),
    0 0 0.6em 0.6em var(--color-primary-5);
}
button.goleft svg {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  -o-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  transform: rotate(-90deg);
}
button.goright svg {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  transform: rotate(90deg);
}
button.horizontal-scroll:hover,
button.horizontal-scroll:focus-visible {
  color: var(--color-primary-14);
}
@media (min-width: 300px) {
  button.horizontal-scroll {
    top: 0.03em;
  }
}
.page {
  padding: 0 var(--page-padding);
  margin: 0 auto;
}
.page > .inner-wrap {
  display: flex;
  flex-flow: row wrap;
  gap: calc(var(--margin)) 2%;
  justify-content: center;
  margin: 2em auto 0;
}
.page > .inner-wrap > * {
  flex: 1 1 calc(100vw - calc(var(--page-padding) * 2) - var(--scrollbar_width));
}
.page .page {
  padding: 0;
}

main.main-content .fullwidth {
  min-width: calc(100vw + 1px - var(--scrollbar_width));
  margin-left: calc(50% - 50vw + calc(var(--scrollbar_width) / 2));
}
main.main-content .fullwidth1 {
  min-width: calc(100vw + 1px - var(--scrollbar_width));
}
.card,
.card > div,
.card > div::before {
  /*Remember to add div inside 'card' section*/
  border-radius: var(--radius-small);
}
/* ... */

